--- a/classes/apps/converse/templates/converse-root.html
+++ b/classes/apps/converse/templates/converse-root.html
@@ -1,6 +1,7 @@
 <converse-chats class="converse-chatboxes row no-gutters converse-fullscreen">
 	<converse-controlbox id="controlbox" class="chatbox  " style=""></converse-controlbox>
 	<converse-muc class="chatbox chatroom" jid="jdev@muc.xmpp.org" id="box-jdev@muc.xmpp.org"></converse-muc>
+	<converse-chat style="visibility: hidden" class="chatbox" jid="guus.der.kinderen@igniterealtime.org"></converse-chat>	
 </converse-chats>
 <div id="converse-modals" class="modals"></div>
 <converse-fontawesome></converse-fontawesome>	
